--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
     <header class="header" id="header">
         <div class="nav-container">
             <div class="logo">
-                <div class="logo-icon"><img src="florian_entruempelungen_logo.jpg" alt="Florian Entrümpelungen Logo" width="200"></div>
+                <div class="logo-icon">🏠</div>
                 <span>Florian-Entrümpelungen</span>
             </div>
             <nav>
